--- a/src/main/resources/templates/Account.html
+++ b/src/main/resources/templates/Account.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{fragments/layout :: layout (~{::body},'Account')}">
+	th:replace="~{fragments/layout : base_header(~{::link},'チャットボットログ')">
 <head>
 <meta charset="utf-8">
 <meta name="description" content="アカウント情報を表示します。">
