--- a/src/main/resources/templates/Account.html
+++ b/src/main/resources/templates/Account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{fragments/layout : base_header(~{::link},'チャットボットログ')">
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/layout : base_header(~{::link},'チャットボットログ')">
+
 <meta charset="utf-8">
 <meta name="description" content="アカウント情報を表示します。">
 <title>アカウント管理</title>
