--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -25,7 +25,7 @@
 				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-th-large"></span> Menu<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li><a href="/Home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-						<li><a href="/Home"><span class="glyphicon glyphicon-user"></span> User</a></li>
+						<li><a href="/index"><span class="glyphicon glyphicon-user"></span> User</a></li>
 						<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
 					</ul>
 				</li>
