--- a/src/main/resources/templates/Account.html
+++ b/src/main/resources/templates/Account.html
@@ -1,61 +1,86 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout :: base_header(~{::link},'チャットボットログ')">
+<head
+	th:replace="fragments/layout :: base_header(~{::link},'チャットボットログ')">
 <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
-
-<meta charset="utf-8">
-<meta name="description" content="アカウント情報を表示します。">
-<title>アカウント管理</title>
-
-<link href="css/common.css" rel="stylesheet" />
-<link href="css/bootstrap.css" rel="stylesheet" />
-<link href="css/jquery.bootgrid.css" rel="stylesheet" />
-
-<link rel="stylesheet" type="text/css"
-	href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-
-<!-- BootstrapのCSS読み込み -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- jQuery読み込み -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- BootstrapのJS読み込み -->
-<script src="js/bootstrap.min.js"></script>
-
 </head>
+
 <body>
 
 	<div th:replace="fragments/layout :: header"></div>
 
-	<script type="text/javascript">
+	<h1>チャットボットログ</h1>
+	<table id='grid-basic'
+		class='table table-condensed table-hover table-striped'>
+		<thead>
+			<tr>
+				<th data-column-id='no' data-type='numeric' data-identifier='true'
+					data-width='10%'>No</th>
+				<th data-column-id='custid' data-width='20%'>ユーザーID</th>
+				<th data-column-id='username' data-width='30%'>ユーザー名</th>
+				<th data-column-id='orgname' data-width='30%'>所属</th>
+				<th data-column-id='lore' data-width='10%'>権限</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>2017/09/27</td>
+				<td>11111</td>
+				<td>テスト</td>
+				<td>テストです</td>
+			</tr>
+		</tbody>
+	</table>
+	<br>
+	<input id="btn_del" type="button" value="選択行の削除" onclick="drow()"
+		style="display: none">
 
+	<script type="text/javascript"
+		src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.js"
+		th:src="@{//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.js}"
+		th:inline="javascript"></script>
+	<script type="text/javascript" src="/javascript/jquery.bootgrid.js"
+		th:src="@{/javascript/jquery.bootgrid.js}" th:inline="javascript"></script>
+	<script type="text/javascript" th:inline="javascript">
+	/*<![CDATA[*/
+	var rowIds = [];
+	$(function() {
+		//alert("ｊｓはじまり");
+		//var h = $(window).height();
+		//$('#wrap').css('display','none');
+		//$('#loader-bg ,#loader').height(h).css('display','block');
+
+		$('#btn_del').css('display', 'block');
+
+	});
+
+	$(document).ready(function () { //全ての読み込みが完了したら実行
+		$('#grid-basic').bootgrid({
+			selection: true,
+			multiSelect: true,
+			rowSelect: true,
+		    keepSelection: true,
+		}).on("selected.rs.jquery.bootgrid", function(e, rows)
+		{
+		    for (var i = 0; i < rows.length; i++)
+		    {
+		        rowIds.push(rows[i].no);
+		    }
+		    //alert("Select: " + rowIds.join(","));
+		}).on("deselected.rs.jquery.bootgrid", function(e, rows)
+		{
+		    for (var i = 0; i < rows.length; i++)
+		    {
+		    	rowIds.some(function(v, ii){
+		    	    if (v==rows[i].no) rowIds.splice(ii,1);
+		    	});
+		        //rowIds.push(rows[i].no);
+		    }
+		    //alert("Deselect: " + rowIds.join(","));
+		});
+	});
+	/*]]>*/
 	</script>
-
-	<div class="container">
-		<div class="table-responsive">
-			<table class='table table-striped table-bordered table-hover'>
-				<thead class="thead-inverse">
-					<tr>
-						<th data-column-id='no' data-type='numeric' data-identifier='true'
-							data-width='10%'>No</th>
-						<th data-column-id='custid' data-width='20%'>ユーザーID</th>
-						<th data-column-id='username' data-width='30%'>ユーザー名</th>
-						<th data-column-id='orgname' data-width='30%'>所属</th>
-						<th data-column-id='lore' data-width='10%'>権限</th>
-					</tr>
-				</thead>
-				<tbody>
-				</tbody>
-			</table>
-		</div>
-	</div>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.js"></script>
-	<script src="src/main/javascript/bootstrap.js"></script>
-	<script src="src/main/javascript/jquery.bootgrid.js"></script>
-
-	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-	<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
 </body>
 </html>
