--- a/src/main/resources/templates/Account.html
+++ b/src/main/resources/templates/Account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head
-	th:replace="fragments/layout :: base_header(~{::link},'チャットボットログ')">
+	th:replace="fragments/layout :: base_header(~{::link},'アカウントビュー')">
 <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
 </head>
 
@@ -9,7 +9,7 @@
 
 	<div th:replace="fragments/layout :: header"></div>
 
-	<h1>チャットボットログ</h1>
+	<h1>アカウント</h1>
 	<table id='grid-basic'
 		class='table table-condensed table-hover table-striped'>
 		<thead>
