--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout :: base_header(~{::link},'login')">
+<head th:replace="fragments/layout :: base_header(~{::link},'Home')">
   <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
 </head>
 <body>
