--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" placeholder="Password を入力して下さい"/>
+                            <input type="password" name="password" id="password" class="form-control" width="200" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
                         <button id="btn-login" class="btn btn-primary btn-block">ログイン</button>
