--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'error')}">
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/layout :: base_header(~{::link},'error')">
+  <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
+</head>
 
   <body>
     <p th:text="${message}">Exception message</p>
   </body>
 
 </html>
+
