--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<div th:replace="layout :: header"></div>
+	<div th:replace="fragments/layout :: header"></div>
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
