--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
                             <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px; width: 350px; text-aling: center;" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
-                        <button id="btn-login" class="btn btn-primary btn-block" style="width: 350px; text-aling: center;">ログイン</button>
+                        <button id="btn-login" class="btn btn-primary btn-block" style="width: 350px; text-align: right;">ログイン</button>
                     </form>
                 </div>
             </div>
