--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,16 +12,16 @@
                 <div class="form-wrap">
                     <div class="text-center"><h1>Login</h1></div>
                     <br/>
-                    <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off" style="text-align: center;">
+                    <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off" >
                         <div class="form-group" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
                             <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></p>
                         </div>
                         <div class="form-group">
-                            <label for="id" class="sr-only">ID</label>
+                            <label for="id" class="sr-only" style="text-align: center;">ID</label>
                             <input type="text" name="username" id="username" class="form-control" style="margin-top: 10px; width: 350px; text-aling: center;" placeholder="ID を入力して下さい"/>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="sr-only">Password</label>
+                            <label for="password" class="sr-only" style="text-align: center;">Password</label>
                             <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px; width: 350px; text-aling: center;" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
