--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,11 +18,11 @@
                         </div>
                         <div class="form-group">
                             <label for="id" class="sr-only" style="text-align: center;">ID</label>
-                            <input type="text" name="username" id="username" class="form-control" style="margin-top: 10px; width: 350px; text-aling: center;" placeholder="ID を入力して下さい"/>
+                            <input type="text" name="username" id="username" class="form-control" style="margin-top: 10px; width: 350px;" placeholder="ID を入力して下さい"/>
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only" style="text-align: center;">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px; width: 350px; text-aling: center;" placeholder="Password を入力して下さい"/>
+                            <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px; width: 350px;" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
                         <button id="btn-login" class="btn btn-primary btn-block" style="width: 350px; text-align: center;">ログイン</button>
