--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,14 +14,14 @@
                     <br/>
                     <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off" >
                         <div class="form-group" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
-                            <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></p>
+                            <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"style="text-align: center;"></p>
                         </div>
                         <div class="form-group">
-                            <label for="id" class="sr-only" style="text-align: center;">ID</label>
+                            <label for="id" class="sr-only">ID</label>
                             <input type="text" name="username" id="username" class="form-control" style="margin-top: 10px; width: 350px;" placeholder="ID を入力して下さい"/>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="sr-only" style="text-align: center;">Password</label>
+                            <label for="password" class="sr-only">Password</label>
                             <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px; width: 350px;" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
