--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,27 +5,26 @@
 </head>
 
 <body>
-	<div th:replace="fragments/layout :: header"></div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-push-3 col-md-6">
                 <div class="form-wrap">
                     <div class="text-center"><h1>Login</h1></div>
                     <br/>
-                    <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off" >
+                    <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off">
                         <div class="form-group" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
-                            <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"style="text-align: center;"></p>
+                            <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></p>
                         </div>
                         <div class="form-group">
                             <label for="id" class="sr-only">ID</label>
-                            <input type="text" name="username" id="username" class="form-control" style="margin-top: 10px;" placeholder="ID を入力して下さい"/>
+                            <input type="text" name="username" id="username" class="form-control" placeholder="ID を入力して下さい"/>
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" style="margin-top: 30px;" placeholder="Password を入力して下さい"/>
+                            <input type="password" name="password" id="password" class="form-control" placeholder="Password を入力して下さい"/>
                         </div>
                         <br/>
-                        <button id="btn-login" class="btn btn-primary btn-block" text-align: center;">ログイン</button>
+                        <button id="btn-login" class="btn btn-primary btn-block">ログイン</button>
                     </form>
                 </div>
             </div>
