--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-push-3 col-md-6">
                 <div class="form-wrap">
-                    <div class="text-center"><h1>Login</h1></div>
+                    <div class="text-center" style="margin-top: 30px;"><h1>Login</h1></div>
                     <br/>
                     <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off">
                         <div class="form-group" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
