--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/layout :: base_header(~{::link},'login')">
-  <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
+<link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-md-push-3 col-md-6">
-                <div class="form-wrap">
-                    <div class="text-center" style="margin-top: 30px;"><h1>Login</h1></div>
-                    <br/>
-                    <form role="form" action="#" th:action="@{/login}" method="post" id="login-form" autocomplete="off">
-                        <div class="form-group" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
-                            <p class="form-control-static text-danger" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></p>
-                        </div>
-                        <div class="form-group">
-                            <label for="id" class="sr-only">ID</label>
-                            <input type="text" name="username" id="username" class="form-control" placeholder="ID を入力して下さい"/>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="sr-only">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" placeholder="Password を入力して下さい" style="margin-top: 30px;"/>
-                        </div>
-                        <br/>
-                        <button id="btn-login" class="btn btn-primary btn-block">ログイン</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Bootstrap core JavaScript
+	<div th:replace="fragments/layout :: header"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-push-3 col-md-6">
+				<div class="form-wrap">
+					<div class="text-center" style="margin-top: 30px;">
+						<h1>Login</h1>
+					</div>
+					<br />
+					<form role="form" action="#" th:action="@{/login}" method="post"
+						id="login-form" autocomplete="off">
+						<div class="form-group"
+							th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null">
+							<p class="form-control-static text-danger"
+								th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></p>
+						</div>
+						<div class="form-group">
+							<label for="id" class="sr-only">ID</label> <input type="text"
+								name="username" id="username" class="form-control"
+								placeholder="ID を入力して下さい" />
+						</div>
+						<div class="form-group">
+							<label for="password" class="sr-only">Password</label> <input
+								type="password" name="password" id="password"
+								class="form-control" placeholder="Password を入力して下さい"
+								style="margin-top: 30px;" />
+						</div>
+						<br />
+						<button id="btn-login" class="btn btn-primary btn-block">ログイン</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/js/ie10-viewport-bug-workaround.js"></script>
-    <script type="text/javascript">
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="/js/ie10-viewport-bug-workaround.js"></script>
+	<script type="text/javascript">
     <!--
     $(document).ready(function() {
         $('#id').focus();
