--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<div th:replace="fragments/layout :: header"></div>
+	<!-- <div th:replace="fragments/layout :: header"></div> -->
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-push-3 col-md-6">
