--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout :: base_header(~{::link},'error')">
+<head th:replace="fragments/layout :: base_header(~{::link},'index')">
 <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
 </head>
 
