--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -24,7 +24,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-th-large"></span> Menu<span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="/Account"><span class="glyphicon glyphicon-home"></span> Account</a></li>
+						<li><a href="/Account"><span class="glyphicon glyphicon-user"></span> Account</a></li>
 						<li><a href="/index"><span class="glyphicon glyphicon-user"></span> User</a></li>
 						<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
 					</ul>
