--- a/src/main/resources/templates/db.html
+++ b/src/main/resources/templates/db.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'db')}">
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="base_header(links, title)">
+<title th:text="${title==null}?'ViewLog' : ${title}+' - ViewLog'">ViewLog</title>
+	<link rel="stylesheet" type="text/css"
+	href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+	<link href="/stylesheets/common.css" rel="stylesheet" />
 
-<body>
-<div class="container">
-    <h1>Database Output</h1>
-  <ul th:each="record : ${records}">
-      <li th:text="${record}"/>
-    </ul>
-</div>
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
-</body>
+	<th:block th:replace="${links}" />
+
+</head>
+	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav>
 </html>
