--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<!-- <div th:replace="fragments/layout :: header"></div> -->
+	<div th:replace="fragments/layout2 :: header"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-push-3 col-md-6">
@@ -47,11 +47,11 @@
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script src="/js/ie10-viewport-bug-workaround.js"></script>
 	<script type="text/javascript">
-    <!--
-    $(document).ready(function() {
-        $('#id').focus();
-    });
-    -->
-    </script>
+	<!--
+		$(document).ready(function() {
+			$('#id').focus();
+		});
+		-->
+	</script>
 </body>
 </html>
