--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,12 +5,12 @@
 </head>
 
 <body>
-	<div th:replace="fragments/layout2 :: header"></div>
+	<!-- <div th:replace="fragments/layout2 :: header"></div> -->
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-push-3 col-md-6">
 				<div class="form-wrap">
-					<div class="text-center" style="margin-top: 30px;">
+					<div class="text-center" style="margin-top: 330px;">
 						<h1>Login</h1>
 					</div>
 					<br />
