--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@ title {
 		<div class="row">
 			<div class="col-xs-12 col-md-push-3 col-md-6">
 				<div class="form-wrap">
-					<div <!-- class="text-center" --> id="title">
+					<div id="title">
 						<h1>Login</h1>
 					</div>
 					<br />
