--- a/src/main/resources/templates/fragments/layout2.html
+++ b/src/main/resources/templates/fragments/layout2.html
@@ -15,4 +15,7 @@
 
 </head>
 	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav>
+		<li>
+			<a> LogView</a>
+		</li>
 </html>
