--- a/src/main/resources/templates/fragments/layout2.html
+++ b/src/main/resources/templates/fragments/layout2.html
@@ -14,8 +14,10 @@
 	<th:block th:replace="${links}" />
 
 </head>
-	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav>
-		<li>
-			<a> LogView</a>
-		</li>
+<body>
+	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav
+		<div class="text-left">
+			<h1>LogView</h1>
+		</div>
+</body>
 </html>
