--- a/src/main/resources/templates/fragments/layout2.html
+++ b/src/main/resources/templates/fragments/layout2.html
@@ -15,6 +15,5 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav
-</body>
+	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header"></nav>
 </html>
