--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <link href="/stylesheets/jquery.bootgrid.css" rel="stylesheet" />
 </head>
 <body>
-	<div th:replace="fragments/layout2 :: header"></div>
+	<div th:replace="fragments/layout :: header"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-push-3 col-md-6">
