--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -2,34 +2,63 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="base_header(links, title)">
 <title th:text="${title==null}?'ViewLog' : ${title}+' - ViewLog'">ViewLog</title>
-	<link rel="stylesheet" type="text/css"
+<link rel="stylesheet" type="text/css"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-	<link href="/stylesheets/common.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+<link href="/stylesheets/common.css" rel="stylesheet" />
 
-	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-	<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
-	<th:block th:replace="${links}" />
+<th:block th:replace="${links}" />
 
 </head>
 
-	<nav class="navbar navbar-default navbar-static-top navbar-inverse" th:fragment="header">
-		<div class="container">
-			<ul class="nav navbar-nav">
-				<li class="active">
-				<a href="/Home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-th-large"></span> Menu<span class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="/Account"><span class="glyphicon glyphicon-user"></span> Account</a></li>
-						<li><a href="/index"><span class="glyphicon glyphicon-user"></span> User</a></li>
-						<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</nav>
+<nav class="navbar navbar-default navbar-static-top navbar-inverse"
+	th:fragment="header">
+	<div class="container">
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="/Home"><span
+					class="glyphicon glyphicon-home"></span> Home</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li class="dropdown"><a href="#" class="dropdown-toggle"
+				data-toggle="dropdown" role="button" aria-expanded="false"><span
+					class="glyphicon glyphicon-th-large"></span> Menu<span
+					class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="/Account"><span
+							class="glyphicon glyphicon-th-list"></span> Log 1</a></li>
+					<li><a href="/index"><span
+							class="glyphicon glyphicon-picture"></span> Log 2</a></li>
+					<li><a href="/logout"><span
+							class="glyphicon glyphicon-align-left"></span> Data</a></li>
+					<li id="visi"><a href="/Account"><span
+							class="glyphicon glyphicon-user"></span> Account</a></li>
+				</ul></li>
+			<li><a type="button" onclick="hyoji2(0)"> 表示</a></li>
+			<li><a type="button" onclick="hyoji2(1)"> 非表示</a></li>
+			<li class="active"><a href="/logout"><span
+					class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+		</ul>
+	</div>
+</nav>
+<script>
+
+function hyoji2(num)
+{
+  if (num == 0)
+  {
+    document.getElementById("visi").disabled = "";
+  }
+  else
+  {
+    document.getElementById("visi").disabled = "disabled";
+  }
+}
+
+</script>
+
+</body>
 </html>
