--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -28,18 +28,18 @@
 						<div class="form-group">
 							<label for="id" class="sr-only">ユーザー名</label>ユーザー名 <input type="text"
 								name="username" id="username" class="form-control"
-								style="margin-top: 30px;" />
+								 />
 						</div>
 						<div class="form-group">
 							<label for="id" class="sr-only">組織名</label>組織名 <input type="text"
-								name="username" id="username" class="form-control"
-								style="margin-top: 30px;" />
+								name="orgname" id="orgname" class="form-control"
+								 />
 						</div>
 						<div class="form-group">
 							<label for="password" class="sr-only">Password</label>Password <input
 								type="password" name="password" id="password"
 								class="form-control"
-								style="margin-top: 30px;" />
+								 />
 						</div>
 
 						<br />
